# digital_rocks_data

./: .buildinfo  .gitignore  CHANGELOG.md  Makefile  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py
.github/workflows/: build-docs.yaml  build.yaml
_autosummary/: drd.html
_downloads/6463cccc468e14db2cf30f3a2ceb76ec/: plot_eleven_sandstones_dataset_example.ipynb
_downloads/ae90065565ca66a7f3b5f89694bd8a25/: plot_eleven_sandstones_dataset_example.py
_downloads/c943fc691bab054d2aeb84a572b9adac/: plot_icl_sandstones_carbonates_2009_example.ipynb
_sources/: index.rst.txt
_sources/auto_examples/: index.rst.txt  plot_eleven_sandstones_dataset_example.rst.txt  plot_icl_sandstones_carbonates_2009_example.rst.txt  sg_execution_times.rst.txt
auto_examples/: index.html  plot_eleven_sandstones_dataset_example.html  plot_icl_sandstones_carbonates_2009_example.html  sg_execution_times.html
docs/source/: conf.py
docs/source/_autosummary/: drd.rst
drd/: __init__.py
drd/datasets/: __init__.py  download_utils.py  eleven_sandstones.py  icl_microct_sandstones_carbonates_2015.py  icl_sandstones_carbonates_2009.py  utils.py
examples/: README.rst  plot_eleven_sandstones_dataset_example.py  plot_icl_sandstones_carbonates_2009_example.py
tests/: test_datasets.py  test_eleven_sandstones.py
