[metadata]
name = drd
version = 0.1.2
author = The Digital Rocks Data Authors
author_email = lukas.mosser@gmail.com
description = Make downloading digital rocks great again
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lukasmosser/digital_rocks_data
classifiers =
    Intended Audience :: Science/Research
    Development Status :: 4 - Beta
    Natural Language :: English
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
packages =
    drd
    drd.datasets
python_requires = >=3.7
install_requires =
    numpy
    xarray
    requests
    tqdm
    py7zr

[options.extras_require]
docs = sphinx
test = pytest
dev = build; pytest; sphinx

[tool:pytest]
addopts = --verbose
python_files = tests/*.py

[flake8]
ignore = E203, E501, W503, E402
per-file-ignores =
    __init__.py: F401, F403, F405
max-line-length = 88